all the way to step 27, added sql file (totally unrelated)

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,3 +62,8 @@ $navbar-default-bg: black;
   height: 100vh;
   background: repeating-linear-gradient(190deg, rgba(102, 102, 102, 0.5), rgba(208, 208, 208, 0.5), rgba(102, 102, 102, 0.5) 100px);
 }
+
+.article-meta-details {
+ border-top: 1px solid #eaeaea;
+ margin-top: 15px;
+}
