--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -14,6 +14,11 @@
     </div>
     <div class="article-body">
      <%= truncate(article.description, length: 100) %>
+     	<div class="article-meta-details">
+     	<small>Created by: <%= article.user.username if article.user %>,
+		<%= time_ago_in_words(article.created_at) %> ago, 
+		last updated: <%= time_ago_in_words(article.updated_at) %> ago</small>
+		</div>
     </div>
     <div class="article-actions">
      		<%= button_to "Edit", edit_article_path(article), method: :get, class: "btn btn-xs btn-primary" %>
