--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,8 +19,15 @@
         <li><%= link_to "My Github", "https://github.com/polttergeist/noveo_ruby" %></li>
       </ul>
       
+
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'About', about_path %></li>
+        <% if logged_in? %>
+          <li><%= button_to "Log out", logout_path, method: :delete %></li>
+        <% else %>
+          <li><%= link_to "Log in", login_path %></li>
+          <li><%= link_to "Sign up", signup_path %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
