--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,5 +7,5 @@
 <h1 align="center">Listing all articles</h1>
 <%= render 'shared/article', obj: @articles %>
 <div align="center">
-  <%= will_paginate %>
+  <%= will_paginate @articles %>
 </div>
