finished with devise, fixed some styles, deleted unnecessary files

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,3 +67,25 @@ $navbar-default-bg: black;
  border-top: 1px solid #eaeaea;
  margin-top: 15px;
 }
+
+.nav button {
+ color: white;
+ background-color: black;
+}
+
+.nav form {
+ text-align: center;
+}
+
+.navbar-nav {
+ display: flex;
+ align-items: center;
+}
+
+#naughty .navbar-link {
+ color: white;
+}
+
+.navbar-brand {
+ background-color: black;
+}
