--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,14 @@ $navbar-default-bg: black;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+html {
+ height: 100%
+}
+
+body {
+ height: 100%
+}
+
 #logo {
  float: left;
  font-size: 1.7em;
@@ -59,7 +67,7 @@ $navbar-default-bg: black;
 }
 
 .main {
-  height: 100vh;
+  height: 100%;
   background: repeating-linear-gradient(190deg, rgba(102, 102, 102, 0.5), rgba(208, 208, 208, 0.5), rgba(102, 102, 102, 0.5) 100px);
 }
 
@@ -88,4 +96,22 @@ $navbar-default-bg: black;
 
 .navbar-brand {
  background-color: black;
+}
+
+#search_form {
+ margin-top: 2rem;
+ margin-bottom: 2rem;
+ display: inline-block;
+ margin-left: 25%;
+ margin-right: 25%;
+ width: 50%;
+}
+
+#search_form input {
+ display: block;
+ margin: auto;
+}
+
+#search {
+ width: 100%;
 }
