fixed some bugs, as well as dockerfile. although it doesn't like 'docker run blog', it works perfectly fine with 'docker run -p 3000:3000 blog'

--- a/app/views/articles/results.html.erb
+++ b/app/views/articles/results.html.erb
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<p align="center"><%= "#{@count} #{'result'.pluralize(@count)}" %></p>
+<p align="center"><%= "#{@results.length} #{'result'.pluralize(@results.length)}" %></p>
 
 <%= render 'shared/article', obj: @results %>
 <div align="center">
