--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,7 +67,8 @@ body {
 }
 
 .main {
-  height: 100%;
+  height: auto;
+  min-height: 100%;
   background: repeating-linear-gradient(190deg, rgba(102, 102, 102, 0.5), rgba(208, 208, 208, 0.5), rgba(102, 102, 102, 0.5) 100px);
 }
 
