--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,7 +8,7 @@
 
 <div class="row justify-content-center">
 	<div class="col-xs-8 col-xs-offset-2">
-		<%= form_with(model: Article.new, url: articles_search_path, method: :get, id: "search_form") do %>
+		<%= form_with(url: search_path, method: :get, id: "search_form") do %>
 			<%= text_field_tag(:search) %>
 			<%= submit_tag("Search") %>
 		<% end %>
